update moderation system
