# docs/swagger.json
@@ -9,6 +9,31 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/activity-history": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get activity history",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ActivityEvent"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/telegram": {
             "get": {
                 "consumes": [
@@ -290,34 +315,6 @@
                 }
             }
         },
-        "/api/collaborations/{id}/hide": {
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "collaborations"
-                ],
-                "summary": "Hide collaboration",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Collaboration ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
         "/api/collaborations/{id}/publish": {
             "put": {
                 "consumes": [
@@ -377,8 +374,8 @@
                 }
             }
         },
-        "/api/collaborations/{id}/show": {
-            "put": {
+        "/api/daily-reward": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -386,21 +383,42 @@
                     "application/json"
                 ],
                 "tags": [
-                    "collaborations"
+                    "users"
                 ],
-                "summary": "Show collaboration",
+                "summary": "Claim daily reward",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/api/feedback-survey": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Create feedback survey",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Collaboration ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Survey data",
+                        "name": "survey",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/FeedbackSurveyRequest"
+                        }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
@@ -425,6 +443,37 @@
                             "items": {
                                 "$ref": "#/definitions/Opportunity"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/posts/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Find post by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Post"
                         }
                     }
                 }
@@ -513,40 +562,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/User"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/users/matching": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "List matching profiles",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/UserProfileShort"
-                            }
                         }
                     }
                 }
@@ -747,25 +762,6 @@
                 }
             }
         },
-        "/api/users/{user_id}/hide": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Hide user",
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            }
-        },
         "/api/users/{user_id}/publish": {
             "post": {
                 "consumes": [
@@ -778,25 +774,6 @@
                     "users"
                 ],
                 "summary": "Publish user",
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            }
-        },
-        "/api/users/{user_id}/show": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Show user",
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -862,6 +839,18 @@
         }
     },
     "definitions": {
+        "ActivityEvent": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "data": {},
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "Badge": {
             "type": "object",
             "properties": {
@@ -1035,6 +1024,18 @@
                 }
             }
         },
+        "FeedbackSurveyRequest": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "maxLength": 1000
+                }
+            }
+        },
         "Opportunity": {
             "type": "object",
             "properties": {
@@ -1055,6 +1056,47 @@
                 },
                 "text": {
                     "type": "string"
+                }
+            }
+        },
+        "Post": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "country_code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "hidden_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/UserProfile"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
